force-app/main/default/objects/TFM_Data_Scopes__mdt/TFM_Data_Scopes__mdt.object-meta.xml
<CustomObject>
    <label>TFM Data Scopes</label>
    <pluralLabel>TFM Data Scopes</pluralLabel>
</CustomObject>