force-app/main/default/objects/TFM_Data_Scopes__mdt/fields/Data_Cluster_Details__c.field-meta.xml
<CustomField>
    <fullName>Data_Cluster_Details__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Details for data scope</description>
    <label>Data Cluster Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>