force-app/main/default/objects/TFM_Data_Scopes__mdt/fields/Data_Cluster_Title__c.field-meta.xml
<CustomField>
    <fullName>Data_Cluster_Title__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Title for data scope</description>
    <label>Data Cluster Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>