force-app/main/default/objects/TFM_Data_Scopes__mdt/fields/Open_and_Closed_Accounts_Disclaimer__c.field-meta.xml
<CustomField>
    <fullName>Open_and_Closed_Accounts_Disclaimer__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Disclaimer for Open and Closed Accounts</description>
    <label>Open and Closed Accounts Disclaimer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>