force-app/main/default/objects/TFM_Data_Scopes__mdt/fields/Scope_ID__c.field-meta.xml
<CustomField>
    <fullName>Scope_ID__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Scope ID
(received in Data recipient request payload)</description>
    <label>Scope ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>