force-app/main/default/objects/TFM_Data_Scopes__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Scope_ID__c</columns>
    <columns>Data_Cluster_Title__c</columns>
    <columns>Data_Cluster_Details__c</columns>
    <columns>Open_Accounts_Disclaimer__c</columns>
    <columns>Closed_Accounts_Disclaimer__c</columns>
    <columns>Open_and_Closed_Accounts_Disclaimer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>